--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,30 @@
+cfn-lint
+docx2txt==0.9
+faiss-cpu==1.11.0.post1
+fastapi==0.116.1
+hf_xet
+ipykernel
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-core==0.3.72
+langchain-google-genai==2.1.8
+langchain-groq==0.3.6
+matplotlib
+nltk
 numpy
 pandas
-matplotlib
-langchain
-python-dotenv
-ipykernel
-langchain_groq
-langchain_google_genai
-
-
+PyMuPDF==1.26.3
+pypdf==5.8.0
+pytest==8.4.1
+python-dotenv==1.1.1
+python-multipart==0.0.20
+scikit-learn
+scipy
+sentence-transformers
+streamlit==1.47.1
+structlog==25.4.0
+torch
+tqdm
+transformers
+uvicorn==0.35.0
 -e .
